fix: add files so no unexpected when creating new plugin

--- a/nx.json
+++ b/nx.json
@@ -63,7 +63,8 @@
       "linter": "eslint",
       "unitTestRunner": "vitest",
       "e2eTestRunner": "none",
-      "projectNameAndRootFormat": "as-provided"
+      "projectNameAndRootFormat": "as-provided",
+      "bundler": "vite"
     },
     "@nx/angular:application": {
       "e2eTestRunner": "none",
