--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "@nx/vite": "19.1.1",
     "@nx/web": "19.1.1",
     "@schematics/angular": "18.0.2",
-    "@swc-node/register": "1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
     "@types/feather-icons": "^4.29.4",
     "@types/node": "20.11.16",
     "@types/uuid": "^9.0.8",
