fix: fix runtime version

--- a/nx.json
+++ b/nx.json
@@ -5,7 +5,7 @@
     }
   },
   "release": {
-    "projects": ["libs/plugins-styles", "libs/plugin-types"]
+    "projects": ["libs/plugins-styles", "libs/plugin-types", "libs/plugins-runtime"]
   },
   "extends": "nx/presets/npm.json",
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
