--- a/libs/plugins-runtime/tsconfig.spec.json
+++ b/libs/plugins-runtime/tsconfig.spec.json
@@ -7,7 +7,8 @@
       "vitest/importMeta",
       "vite/client",
       "node",
-      "vitest"
+      "vitest",
+      "ses"
     ]
   },
   "include": [
