--- a/package.json
+++ b/package.json
@@ -29,35 +29,36 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.0.2",
-    "@angular-devkit/core": "18.0.2",
-    "@angular-devkit/schematics": "18.0.2",
-    "@angular-eslint/eslint-plugin": "17.3.0",
-    "@angular-eslint/eslint-plugin-template": "17.3.0",
-    "@angular-eslint/template-parser": "17.3.0",
-    "@angular/cli": "~18.0.0",
-    "@angular/compiler-cli": "18.0.1",
-    "@angular/language-service": "18.0.1",
+    "@angular-devkit/build-angular": "18.1.3",
+    "@angular-devkit/core": "18.1.3",
+    "@angular-devkit/schematics": "18.1.3",
+    "@angular-eslint/eslint-plugin": "18.2.0",
+    "@angular-eslint/eslint-plugin-template": "18.2.0",
+    "@angular-eslint/template-parser": "18.2.0",
+    "@angular/cli": "~18.1.0",
+    "@angular/compiler-cli": "18.1.3",
+    "@angular/language-service": "18.1.3",
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
     "@eslint/eslintrc": "^2.1.1",
-    "@nx/angular": "19.1.1",
-    "@nx/esbuild": "19.1.1",
-    "@nx/eslint": "19.1.1",
-    "@nx/eslint-plugin": "19.1.1",
-    "@nx/js": "19.1.1",
-    "@nx/node": "19.1.1",
-    "@nx/vite": "19.1.1",
-    "@nx/web": "19.1.1",
-    "@schematics/angular": "18.0.2",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
+    "@nx/angular": "19.5.6",
+    "@nx/esbuild": "19.5.6",
+    "@nx/eslint": "19.5.6",
+    "@nx/eslint-plugin": "19.5.6",
+    "@nx/js": "19.5.6",
+    "@nx/node": "19.5.6",
+    "@nx/vite": "19.5.6",
+    "@nx/web": "19.5.6",
+    "@schematics/angular": "18.1.3",
+    "@swc-node/register": "1.9.2",
+    "@swc/core": "1.5.7",
+    "@swc/helpers": "0.5.12",
     "@types/feather-icons": "^4.29.4",
     "@types/node": "20.11.16",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "7.9.0",
-    "@typescript-eslint/parser": "7.9.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/utils": "^7.16.0",
     "@vitest/coverage-v8": "1.6.0",
     "@vitest/ui": "1.6.0",
     "concurrently": "^8.2.2",
@@ -71,12 +72,12 @@
     "husky": "^9.0.10",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "19.1.1",
+    "nx": "19.5.6",
     "prettier": "^2.6.2",
     "swc-loader": "0.1.15",
     "tsx": "^4.16.2",
-    "typedoc": "^0.25.13",
-    "typescript": "~5.4.5",
+    "typedoc": "^0.26.5",
+    "typescript": "5.5.4",
     "vite": "^5.0.0",
     "vite-plugin-checker": "^0.6.4",
     "vite-plugin-dts": "~2.3.0",
@@ -86,19 +87,19 @@
     "packages/*"
   ],
   "dependencies": {
-    "@angular/animations": "18.0.1",
-    "@angular/common": "18.0.1",
-    "@angular/compiler": "18.0.1",
-    "@angular/core": "18.0.1",
-    "@angular/forms": "18.0.1",
-    "@angular/platform-browser": "18.0.1",
-    "@angular/platform-browser-dynamic": "18.0.1",
-    "@angular/router": "18.0.1",
+    "@angular/animations": "18.1.3",
+    "@angular/common": "18.1.3",
+    "@angular/compiler": "18.1.3",
+    "@angular/core": "18.1.3",
+    "@angular/forms": "18.1.3",
+    "@angular/platform-browser": "18.1.3",
+    "@angular/platform-browser-dynamic": "18.1.3",
+    "@angular/router": "18.1.3",
     "axios": "^1.6.0",
     "feather-icons": "^4.29.2",
     "puppeteer": "^22.11.0",
     "rxjs": "~7.8.0",
-    "ses": "^1.5.0",
+    "ses": "^1.7.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
