--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,20 +17,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        id: setup-node
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: .nvmrc
-          cache: npm
-
-      - name: Install Dependencies
-        id: npm-ci
-        run: npm ci
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/prepare
 
       - name: Lint
         id: npm-lint
@@ -39,3 +27,19 @@ jobs:
       - name: Test
         id: npm-test
         run: npm run test
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/prepare
+
+      - name: Build runtime
+        run: npm run build
+
+      - name: Build plugins
+        run: npm run build:plugins
+
+      - name: Build styles
+        run: npm run build:styles-example
