--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,6 +1,6 @@
 description: Create a report to help us improve
 labels: ["bug"]
-name: Bug report
+name: Plugin bug report
 title: "bug: "
 body:
   - type: markdown
