--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,6 +1,6 @@
 description: Suggest an idea for this project.
 labels: ["needs triage", "enhancement"]
-name: "Feature request"
+name: "Plugin feature request"
 title: "feature: "
 body:
   - type: markdown
