chore: fix wrong urls

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -8,7 +8,7 @@ body:
       value: |
         ## Before you start
 
-        Please search our [existing issues](https://github.com/penpot/penpot/issues) and open [pull requests](https://github.com/penpot/penpot/pulls) to lessen the change of filing duplicate issues or feature requests. Thank you.
+        Please search our [existing issues](https://github.com/penpot/penpot-plugins/issues) and open [pull requests](https://github.com/penpot/penpot-plugins/pulls) to lessen the change of filing duplicate issues or feature requests. Thank you.
 
         ---
   - type: textarea
