--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:styles-example": "npx nx run example-styles:build",
     "lint": "nx run-many --all --target=lint --parallel",
     "lint:affected": "npx nx affected --target=lint",
-    "test": "nx run-many -t test --parallel -p plugins-runtime lorem-ipsum-plugin",
+    "test": "nx run-many -t test --parallel -p plugins-runtime lorem-ipsum-plugin colors-to-tokens-plugin",
     "test:e2e": "npx nx test e2e",
     "registry": "nx local-registry",
     "prepare": "husky",
@@ -29,27 +29,27 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.1.3",
-    "@angular-devkit/core": "18.1.3",
-    "@angular-devkit/schematics": "18.1.3",
-    "@angular-eslint/eslint-plugin": "18.2.0",
-    "@angular-eslint/eslint-plugin-template": "18.2.0",
-    "@angular-eslint/template-parser": "18.2.0",
-    "@angular/cli": "~18.1.0",
-    "@angular/compiler-cli": "18.1.3",
-    "@angular/language-service": "18.1.3",
+    "@angular-devkit/build-angular": "19.1.4",
+    "@angular-devkit/core": "19.1.4",
+    "@angular-devkit/schematics": "19.0.7",
+    "@angular-eslint/eslint-plugin": "19.0.2",
+    "@angular-eslint/eslint-plugin-template": "19.0.2",
+    "@angular-eslint/template-parser": "19.0.2",
+    "@angular/cli": "~19.0.0",
+    "@angular/compiler-cli": "19.1.3",
+    "@angular/language-service": "19.1.3",
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
     "@eslint/eslintrc": "^2.1.1",
-    "@nx/angular": "19.5.6",
-    "@nx/esbuild": "19.5.6",
-    "@nx/eslint": "19.5.6",
-    "@nx/eslint-plugin": "19.5.6",
-    "@nx/js": "19.5.6",
-    "@nx/node": "19.5.6",
-    "@nx/vite": "19.5.6",
-    "@nx/web": "19.5.6",
-    "@schematics/angular": "18.1.3",
+    "@nx/angular": "20.3.2",
+    "@nx/esbuild": "20.3.2",
+    "@nx/eslint": "20.3.2",
+    "@nx/eslint-plugin": "20.3.2",
+    "@nx/js": "20.3.2",
+    "@nx/node": "20.3.2",
+    "@nx/vite": "20.3.2",
+    "@nx/web": "20.3.2",
+    "@schematics/angular": "19.0.7",
     "@swc-node/register": "1.9.2",
     "@swc/core": "1.5.7",
     "@swc/helpers": "0.5.12",
@@ -72,12 +72,12 @@
     "husky": "^9.0.10",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "19.5.6",
-    "prettier": "^2.6.2",
+    "nx": "20.3.2",
+    "prettier": "^3.4.2",
     "swc-loader": "0.1.15",
     "tsx": "^4.16.2",
     "typedoc": "^0.26.5",
-    "typescript": "5.5.4",
+    "typescript": "5.6.3",
     "vite": "^5.0.0",
     "vite-plugin-checker": "^0.6.4",
     "vite-plugin-dts": "~2.3.0",
@@ -87,14 +87,14 @@
     "packages/*"
   ],
   "dependencies": {
-    "@angular/animations": "18.1.3",
-    "@angular/common": "18.1.3",
-    "@angular/compiler": "18.1.3",
-    "@angular/core": "18.1.3",
-    "@angular/forms": "18.1.3",
-    "@angular/platform-browser": "18.1.3",
-    "@angular/platform-browser-dynamic": "18.1.3",
-    "@angular/router": "18.1.3",
+    "@angular/animations": "19.1.3",
+    "@angular/common": "19.1.3",
+    "@angular/compiler": "19.1.3",
+    "@angular/core": "19.1.3",
+    "@angular/forms": "19.1.3",
+    "@angular/platform-browser": "19.1.3",
+    "@angular/platform-browser-dynamic": "19.1.3",
+    "@angular/router": "19.1.3",
     "axios": "^1.6.0",
     "feather-icons": "^4.29.2",
     "puppeteer": "^22.11.0",
@@ -103,7 +103,7 @@
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
-    "zone.js": "~0.14.3"
+    "zone.js": "0.15.0"
   },
   "nx": {
     "includedScripts": []
