--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start:plugin:palette": "npx nx run create-palette-plugin:build --watch & npx nx run create-palette-plugin:preview",
     "start:plugin:table": "npx nx run table-plugin:init",
     "start:plugin:renamelayers": "npx nx run rename-layers-plugin:init",
+    "start:plugin:colors-to-tokens": "npx nx run colors-to-tokens-plugin:init",
     "build": "npx nx build plugins-runtime --emptyOutDir=true",
     "build:plugins": "npx nx run-many -t build --parallel -p tag:type:plugin --exclude=poc-state-plugin",
     "build:styles-example": "npx nx run example-styles:build",
