feat: plugins-runtime as npm library

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "vite": "^5.0.0",
     "vite-plugin-checker": "^0.6.4",
     "vite-plugin-dts": "~2.3.0",
+    "vite-plugin-static-copy": "^3.1.0",
     "vitest": "1.6.0"
   },
   "workspaces": [
@@ -100,7 +101,7 @@
     "feather-icons": "^4.29.2",
     "puppeteer": "^22.11.0",
     "rxjs": "~7.8.0",
-    "ses": "^1.7.0",
+    "ses": "^1.13.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
