--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,9 @@ jobs:
         id: npm-lint
         run: npm run lint
 
-      - name: Format Check
-        id: npm-format-check
-        run: npm run format:check
+#      - name: Format Check
+#        id: npm-format-check
+#        run: npm run format:check
 
       - name: Test
         id: npm-test
