--- a/apps/icons-plugin/src/assets/manifest.json
+++ b/apps/icons-plugin/src/assets/manifest.json
@@ -3,8 +3,5 @@
   "code": "/assets/plugin.js",
   "icon": "/assets/icon.png",
   "description": "Create icons from the Feather Icons set",
-  "permissions": [
-    "content:read",
-    "content:write"
-  ]
+  "permissions": ["content:read", "content:write"]
 }
