--- a/tools/tsconfig.json
+++ b/tools/tsconfig.json
@@ -9,12 +9,8 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "types": [
-      "node"
-    ]
+    "types": ["node"]
   },
   "files": [],
-  "include": [
-    "**/*.ts",
-  ]
+  "include": ["**/*.ts"]
 }
