--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,7 +1,7 @@
 description: Create a report to help us improve
-labels: ["bug"]
+labels: ['bug']
 name: Plugins bug report
-title: "bug: "
+title: 'bug: '
 body:
   - type: markdown
     attributes:
