--- a/apps/lorem-ipsum-plugin/src/assets/manifest.json
+++ b/apps/lorem-ipsum-plugin/src/assets/manifest.json
@@ -3,8 +3,5 @@
   "description": "Lorem ipsum text generator plugin",
   "code": "/assets/plugin.js",
   "icon": "/assets/icon.png",
-  "permissions": [
-    "content:read",
-    "content:write"
-  ]
+  "permissions": ["content:read", "content:write"]
 }
