--- a/apps/rename-layers-plugin/src/assets/manifest.json
+++ b/apps/rename-layers-plugin/src/assets/manifest.json
@@ -3,8 +3,5 @@
   "description": "Change the name of one or several layers",
   "code": "/assets/plugin.js",
   "icon": "/assets/icon.png",
-  "permissions": [
-    "content:read",
-    "content:write"
-  ]
+  "permissions": ["content:read", "content:write"]
 }
