--- a/libs/plugin-types/tsconfig.json
+++ b/libs/plugin-types/tsconfig.json
@@ -1,19 +1,14 @@
 {
   "compilerOptions": {
-      "module": "node16",
-      "lib": [
-          "es6",
-          "dom"
-      ],
-      "noImplicitAny": true,
-      "noImplicitThis": true,
-      "strictNullChecks": true,
-      "strictFunctionTypes": true,
-      "types": [],
-      "noEmit": true,
-      "forceConsistentCasingInFileNames": true
+    "module": "node16",
+    "lib": ["es6", "dom"],
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "types": [],
+    "noEmit": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "files": [
-    "index.d.ts"
-  ]
+  "files": ["index.d.ts"]
 }
