feat: change in workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,13 @@ name: Continuous Integration
 on:
   pull_request:
     branches:
+      - develop
+      - staging
       - main
   push:
     branches:
+      - develop
+      - staging
       - main
 
 permissions:
